test/abort1.slq
// args: --run

def abort(){ assert(false); } // error

def main():ğ”¹{
	abort();
}
